@@ -1,3 +1,8 @@
+1999-07-30  Peter Teichman  <pat4@acpub.duke.edu>
+
+	* gnome-conduit-check.m4: added new file of checks. anything that
+	provides a pilot conduit is going to want this
+
 Sat Jun 26 01:47:53 1999  Tim Janik  <timj@gtk.org>
 
 	* compiler-flags.m4: give -Wunused to gcc instead of -Wno-unused.
